@@ -12,13 +12,23 @@ environment, you can change the definition of where() to return a separately
 packaged CA bundle.
 """
 
-import os.path
+import os
 import sys
 import imp
 
 
 def where():
     """Return the preferred certificate bundle."""
+
+    if os.name == 'nt':
+        override_path = os.path.expandvars(r'${SystemDrive}\cfn\ca-override.pem')
+    else:
+        override_path = '/etc/cfn/ca-override.pem'
+
+    override_path = os.getenv('CA_OVERRIDE', override_path)
+
+    if os.path.isfile(override_path):
+        return override_path
 
     # Modification for compilation by py2exe:
     if (hasattr(sys, "frozen") or  # new py2exe
