@@ -1,3 +1,7 @@
+* Fri Jan 09 2015 - adamthom (at) amazon.com
+- Allow the certificate bundle to be overridden using CA_OVERRIDE env. variable or /etc/cfn/ca-override.pem.
+- Fix an issue where spaces in S3 keys were not being encoded properly for Signature V4 requests.
+
 * Fri Oct 17 2014 - adamthom (at) amazon.com
 - Use V4 signatures for SQS
 - Use V4 signatures for S3 when the region is specified
